--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vue-style-loader": "^1.0.0",
+    "vue-swiper": "^0.5.0",
     "vue-touch": "^1.1.0",
     "vuex": "^1.0.0-rc.2",
     "vuex-router-sync": "^2.1.0",
