--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "mint-ui": "^1.0.2",
     "vue": "^1.0.21",
     "whatwg-fetch": "^1.0.0"
   },
@@ -22,6 +23,7 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.6.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.0.0",
