--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
+    "html2canvas": "^0.5.0-beta4",
     "http-proxy-middleware": "^0.12.0",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
